--- a/figs/ch1/guibas/knit5.tex
+++ b/figs/ch1/guibas/knit5.tex
@@ -29,113 +29,11 @@
 \catcode`@=12
 
 \fi
-\psset{unit=2in,xunit=2in,yunit=2in}
+% \psset{unit=2in,xunit=2in,yunit=2in}
+\psset{unit=.33\textwidth,xunit=.33\textwidth,yunit=.33\textwidth}
 \pspicture(0.100000,-0.200000)(1.90000,1.000000)
 \ifx\nofigs\undefined
 \catcode`@=11
-
-% \rput[b](.6,.9){$D_{L}$}
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.3694,0.1336)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.8570,0.4534)
-
-% \psline[linestyle=dotted](0.1587,0.7674)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.3694,0.1336)
-% (0.7225,0.1534)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.3694,0.1336)
-
-% \psline[linestyle=dotted](0.7225,0.1534)
-% (0.3694,0.1336)
-
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.1587,0.7674)
-
-% \psline[linestyle=dotted](0.1587,0.7674)
-% (0.4416,0.8727)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.8570,0.4534)
-
-% \psline[linestyle=dotted](0.8570,0.4534)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.1587,0.7674)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.7225,0.1534)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.7265,0.7654)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.4416,0.8727)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.4416,0.8727)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.4416,0.8727)
-% (0.1587,0.7674)
-
-% \psline[linestyle=dotted](0.7225,0.1534)
-% (0.8570,0.4534)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.4416,0.8727)
-
-% \psline[linestyle=dotted](0.3694,0.1336)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.7225,0.1534)
-
-% \psline[linestyle=dotted](0.8570,0.4534)
-% (0.7225,0.1534)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.1587,0.7674)
-
-% \psline[linestyle=dotted](0.4416,0.8727)
-% (0.7265,0.7654)
-
-% \psline[linestyle=dotted](0.8570,0.4534)
-% (0.7265,0.7654)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.3694,0.1336)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.7265,0.7654)
 \rput[b](.4,.9){$D_{L}$}
 \pscustom[linestyle=dotted]{
   \translate(-.2, 0.0)
