--- a/figs/ch1/guibas/knit_done.tex
+++ b/figs/ch1/guibas/knit_done.tex
@@ -35,109 +35,7 @@
 \ifx\nofigs\undefined
 \catcode`@=11
 
-% \rput[b](.6,.9){$D_{L}$}
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.3694,0.1336)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.8570,0.4534)
-
-% \psline[linestyle=dotted](0.1587,0.7674)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.3694,0.1336)
-% (0.7225,0.1534)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.3694,0.1336)
-
-% \psline[linestyle=dotted](0.7225,0.1534)
-% (0.3694,0.1336)
-
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.1587,0.7674)
-
-% \psline[linestyle=dotted](0.1587,0.7674)
-% (0.4416,0.8727)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.8570,0.4534)
-
-% \psline[linestyle=dotted](0.8570,0.4534)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.1587,0.7674)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.7225,0.1534)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.7265,0.7654)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.4416,0.8727)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.4416,0.8727)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.4416,0.8727)
-% (0.1587,0.7674)
-
-% \psline[linestyle=dotted](0.7225,0.1534)
-% (0.8570,0.4534)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.4416,0.8727)
-
-% \psline[linestyle=dotted](0.3694,0.1336)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.7225,0.1534)
-
-% \psline[linestyle=dotted](0.8570,0.4534)
-% (0.7225,0.1534)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.1587,0.7674)
-
-% \psline[linestyle=dotted](0.4416,0.8727)
-% (0.7265,0.7654)
-
-% \psline[linestyle=dotted](0.8570,0.4534)
-% (0.7265,0.7654)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.3694,0.1336)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.7265,0.7654)
-\rput[b](.4,.9){$D_{L}$}
+% \rput[b](.4,.9){$D_{L}$}
 \pscustom[linestyle=dotted]{
   \translate(-.2, 0.0)
   \psline[liftpen=2](0.1426,0.4554)
@@ -214,7 +112,7 @@
 % extra right point
 \psdots(0.80,0.58) %lcand.dest
 
-\rput[b](1.6,.7){$D_{R}$}
+% \rput[b](1.6,.7){$D_{R}$}
 \pscustom[linestyle=dotted]{
   \translate(1.0, -0.2)
   \psline[liftpen=2](0.1426,0.4554)
@@ -268,49 +166,53 @@
   \psline[liftpen=2](0.7265,0.7654)
     (0.3674,0.6343)
 }
-  \psdots[linecolor=lightgray](1.1426,0.2554) %leftmost of dr (rcand.twin.source)
-  \psdots[linecolor=lightgray](1.1587,0.5674)
-  \psdots[linecolor=lightgray](1.4416,0.6727)
-  \psdots[linecolor=lightgray](1.7265,0.5654)
-  \psdots[linecolor=lightgray](1.8570,0.2534)
-  \psdots[linecolor=lightgray](1.7225,-0.0466)
-  \psdots[linecolor=lightgray](1.3694,-0.0664) %rcand.source
-  \psdots[linecolor=lightgray](1.3674,0.4343) 
-  \psdots[linecolor=lightgray](1.5821,0.2217)
+  \psdots(1.1426,0.2554) %leftmost of dr (rcand.twin.source)
+  \psdots(1.1587,0.5674)
+  \psdots(1.4416,0.6727)
+  \psdots(1.7265,0.5654)
+  \psdots(1.8570,0.2534)
+  \psdots(1.7225,-0.0466)
+  \psdots(1.3694,-0.0664) %rcand.source
+  \psdots(1.3674,0.4343) 
+  \psdots(1.5821,0.2217)
 
-%old basel
-% \rput[b]{-10}(.85,-.07){\emph{basel}}
+%1st spanner
 \psline[linestyle=dotted]{-}(0.1694,0.1336)(1.3694,-0.0664)
 
-%basel
-\rput[b]{-13}(.9,0.07){\emph{basel}}
-\psline[arrowsize=3pt 4, arrowinset=0]{<-}(0.53,0.15)(1.3694,-0.0664)
+%2nd spanner
+\psline[linestyle=dotted]{-}(0.5225,0.1534)(1.3694,-0.0664)
 
-%rcand
-\rput[b]{-37}(1.27,.1){$r$}
-\psline[linecolor=lightgray, arrowsize=3pt 4, arrowinset=0]{->}(1.3694,-0.0664)(1.148,0.24)
+%3rd spanner
+\psline[linestyle=dotted]{-}(0.5225,0.1534)(1.1426,0.2554)
 
-%lcand
-\rput[t]{60}(.6,.28){$\ell$}
-\psline[arrowsize=3pt 4, arrowinset=0]{->}(0.5225,0.1534)(0.65,0.44)
+%4th spanner
+\psline[linestyle=dotted]{-}(0.6570,0.4534)(1.1426,0.2554)
 
-%lcand.onext
-\rput[b](0.37,0.45){$v$}
-\psline[arrowsize=3pt 4, arrowinset=0]{->}(0.5225,0.1534)(0.38,0.417)
-%lcand.onext
+%5th spanner
+\psline[linestyle=dotted]{-}(1.1426,0.2554)(0.80,0.58)
 
-% circle
-% \rput[b](-.5,1.0){\emph{"Rising Bubble"}}
-% \psarc[linewidth=.75pt, linestyle=dashed](.457164, -1.83982){1.99428684}{55}{105}
+%6th spanner
+\psline[linestyle=dotted]{-}(0.80,0.58)(1.1587,0.5674)
 
-% %lcand.onext()
-% \rput[b](0.37,0.455){$v$}
-% \rput[b]{55.5}(.24,.27){$\ell.onext$}
-% \psline[arrowsize=3pt 4, arrowinset=0]{->}(0.1694,0.1336)(0.375,0.41)
+%7th spanner
+% \psline[linestyle=dotted]{-}(0.80,0.58)(1.4416,0.6727)
+\psline[linestyle=dotted]{-}(0.5265,0.7654)(1.1587,0.5674)
 
-% % circle
-% % \rput[b](-.5,1.0){\emph{"Rising Bubble"}}
-% \psarc[linewidth=.75pt, linestyle=dashed](0.976594, 0.161571){0.454167}{-30}{200}
+%8th spanner
+\psline[linestyle=dotted]{-}(0.5265,0.7654)(1.4416,0.6727)
+
+% uct
+% \rput[b]{-6}(.9,0.78){\emph{uct}}
+\psline[linestyle=dotted]{-}(0.245,0.8727)(1.4416,0.6727)
+
+
+% %rcand
+% \rput[t]{-15}(1.55,.61){$r$}
+% \psline[arrowsize=3pt 4, arrowinset=0]{->}(1.4416,0.6727)(1.7265,0.5654)
+
+% % lcand
+% \rput[t]{45}(.1,.8){$\ell$}
+% \psline[arrowsize=3pt 4, arrowinset=0]{->}(0.24,0.8727)(-0.0413,0.7674)
 
 \catcode`@=12
 \fi
