--- a/figs/ch1/guibas/hwe.tex
+++ b/figs/ch1/guibas/hwe.tex
@@ -4,8 +4,8 @@
 \def\PSTloaded{t}
 
 \fi
-\psset{unit=1in,xunit=1in,yunit=1in}
-\pspicture(-1.000000,-1.000000)(1.000000,1.000000)
+\psset{unit=.1667\textwidth,xunit=.1667\textwidth,yunit=.1667\textwidth}
+\pspicture(-1.2500000,-1.2500000)(1.25000000,1.25000000)
 \ifx\nofigs\undefined
 \catcode`@=11
 
@@ -36,7 +36,7 @@
 } 
 
 % bottom
-\pscustom[linewidth=1.5pt, linecolor=darkgray]{
+\pscustom[linewidth=1.5pt, linecolor=gray]{
   \mrestore
   \msave
   \rotate{180}
@@ -52,7 +52,7 @@
 
 
 % left
-\pscustom[linewidth=1.5pt, linecolor=darkgray]{
+\pscustom[linewidth=1.5pt, linecolor=gray]{
   \mrestore
   \msave
   \translate(-0.05, 0.0)
@@ -68,7 +68,7 @@
   % \mrestore
 } 
 % right
-\pscustom[linewidth=1.5pt, linecolor=darkgray]{
+\pscustom[linewidth=1.5pt, linecolor=gray]{
   \mrestore
   \translate(0.05, 0.0)
   \rotate{180}
