--- a/figs/ch1/guibas/knit0.tex
+++ b/figs/ch1/guibas/knit0.tex
@@ -28,7 +28,8 @@
 \catcode`@=12
 
 \fi
-\psset{unit=2in,xunit=2in,yunit=2in}
+% \psset{unit=2in,xunit=2in,yunit=2in}
+\psset{unit=.33\textwidth,xunit=.33\textwidth,yunit=.33\textwidth}
 \pspicture(0.100000,-0.200000)(1.90000,1.000000)
 \ifx\nofigs\undefined
 \catcode`@=11
