--- a/figs/ch1/guibas/knit9.tex
+++ b/figs/ch1/guibas/knit9.tex
@@ -35,108 +35,6 @@
 \ifx\nofigs\undefined
 \catcode`@=11
 
-% \rput[b](.6,.9){$D_{L}$}
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.3694,0.1336)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.8570,0.4534)
-
-% \psline[linestyle=dotted](0.1587,0.7674)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.3694,0.1336)
-% (0.7225,0.1534)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.3694,0.1336)
-
-% \psline[linestyle=dotted](0.7225,0.1534)
-% (0.3694,0.1336)
-
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.1587,0.7674)
-
-% \psline[linestyle=dotted](0.1587,0.7674)
-% (0.4416,0.8727)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.8570,0.4534)
-
-% \psline[linestyle=dotted](0.8570,0.4534)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.1587,0.7674)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.7225,0.1534)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.7265,0.7654)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.4416,0.8727)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.4416,0.8727)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.4416,0.8727)
-% (0.1587,0.7674)
-
-% \psline[linestyle=dotted](0.7225,0.1534)
-% (0.8570,0.4534)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.4416,0.8727)
-
-% \psline[linestyle=dotted](0.3694,0.1336)
-% (0.5821,0.4217)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.1426,0.4554)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.5821,0.4217)
-% (0.7225,0.1534)
-
-% \psline[linestyle=dotted](0.8570,0.4534)
-% (0.7225,0.1534)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.1587,0.7674)
-
-% \psline[linestyle=dotted](0.4416,0.8727)
-% (0.7265,0.7654)
-
-% \psline[linestyle=dotted](0.8570,0.4534)
-% (0.7265,0.7654)
-
-% \psline[linestyle=dotted](0.7265,0.7654)
-% (0.3674,0.6343)
-
-% \psline[linestyle=dotted](0.3694,0.1336)
-% (0.1426,0.4554)
-
-% \psline[linestyle=dotted](0.3674,0.6343)
-% (0.7265,0.7654)
 \rput[b](.4,.9){$D_{L}$}
 \pscustom[linestyle=dotted]{
   \translate(-.2, 0.0)
@@ -202,17 +100,17 @@
   (0.8570,0.4534)
 }
 
-\psdots(-0.0574,0.4554)
-\psdots(-0.0413,0.7674)
-\psdots(0.2416,0.8727)
-\psdots(0.5265,0.7654)
-\psdots(0.6570,0.4534) %lcand.onext.dest
-\psdots(0.5225,0.1534) %lcand.source
-\psdots(0.1694,0.1336) %lowest point in dl
-\psdots(0.1674,0.6343)
-\psdots(0.3821,0.4217)
+\psdots[linecolor=lightgray](-0.0574,0.4554)
+\psdots[linecolor=lightgray](-0.0413,0.7674)
+\psdots[linecolor=lightgray](0.2416,0.8727)
+\psdots[linecolor=lightgray](0.5265,0.7654)
+\psdots[linecolor=lightgray](0.6570,0.4534) %lcand.onext.dest
+\psdots[linecolor=lightgray](0.5225,0.1534) %lcand.source
+\psdots[linecolor=lightgray](0.1694,0.1336) %lowest point in dl
+\psdots[linecolor=lightgray](0.1674,0.6343)
+\psdots[linecolor=lightgray](0.3821,0.4217)
 % extra right point
-\psdots(0.80,0.58) %lcand.dest
+\psdots[linecolor=lightgray](0.80,0.58) %lcand.dest
 
 \rput[b](1.6,.7){$D_{R}$}
 \pscustom[linestyle=dotted]{
@@ -268,15 +166,15 @@
   \psline[liftpen=2](0.7265,0.7654)
     (0.3674,0.6343)
 }
-  \psdots[linecolor=lightgray](1.1426,0.2554) %leftmost of dr (rcand.twin.source)
-  \psdots[linecolor=lightgray](1.1587,0.5674)
-  \psdots[linecolor=lightgray](1.4416,0.6727)
-  \psdots[linecolor=lightgray](1.7265,0.5654)
-  \psdots[linecolor=lightgray](1.8570,0.2534)
-  \psdots[linecolor=lightgray](1.7225,-0.0466)
-  \psdots[linecolor=lightgray](1.3694,-0.0664) %rcand.source
-  \psdots[linecolor=lightgray](1.3674,0.4343) 
-  \psdots[linecolor=lightgray](1.5821,0.2217)
+  \psdots(1.1426,0.2554) %leftmost of dr (rcand.twin.source)
+  \psdots(1.1587,0.5674)
+  \psdots(1.4416,0.6727)
+  \psdots(1.7265,0.5654)
+  \psdots(1.8570,0.2534)
+  \psdots(1.7225,-0.0466)
+  \psdots(1.3694,-0.0664) %rcand.source
+  \psdots(1.3674,0.4343) 
+  \psdots(1.5821,0.2217)
 
 %old basel
 % \rput[b]{-10}(.85,-.07){\emph{basel}}
@@ -288,15 +186,20 @@
 
 %rcand
 \rput[b]{-37}(1.27,.1){$r$}
-\psline[linecolor=lightgray, arrowsize=3pt 4, arrowinset=0]{->}(1.3694,-0.0664)(1.148,0.24)
+\psline[arrowsize=3pt 4, arrowinset=0]{->}(1.3694,-0.0664)(1.148,0.24)
+
+%rcand.oprev()
+\rput[b](1.56,0.27){$u$}
+% \rput[t]{55}(1.5,.06){$r.oprev$}
+\psline[arrowsize=3pt 4, arrowinset=0]{->}(1.3694,-0.0664)(1.5821,0.2217)
 
 %lcand
 \rput[t]{60}(.6,.28){$\ell$}
-\psline[arrowsize=3pt 4, arrowinset=0]{->}(0.5225,0.1534)(0.65,0.44)
+\psline[linecolor=lightgray, arrowsize=3pt 4, arrowinset=0]{->}(0.5225,0.1534)(0.65,0.44)
 
 %lcand.onext
-\rput[b](0.37,0.45){$v$}
-\psline[arrowsize=3pt 4, arrowinset=0]{->}(0.5225,0.1534)(0.38,0.417)
+% \rput[b](0.37,0.45){$v$}
+% \psline[linecolor=lightgray, arrowsize=3pt 4, arrowinset=0]{->}(0.5225,0.1534)(0.38,0.417)
 %lcand.onext
 
 % circle
@@ -308,10 +211,9 @@
 % \rput[b]{55.5}(.24,.27){$\ell.onext$}
 % \psline[arrowsize=3pt 4, arrowinset=0]{->}(0.1694,0.1336)(0.375,0.41)
 
-% % circle
-% % \rput[b](-.5,1.0){\emph{"Rising Bubble"}}
-% \psarc[linewidth=.75pt, linestyle=dashed](0.976594, 0.161571){0.454167}{-30}{200}
-
+% circle
+% \rput[b](-.5,1.0){\emph{"Rising Bubble"}}
+\psarc[linewidth=.75pt, linestyle=dashed, linecolor=darkgray](0.89274, -0.16152){0.486058}{10}{165}
 \catcode`@=12
 \fi
 \endpspicture
