feeling okay about this

--- a/figs/ch1/guibas/knit_done.tex
+++ b/figs/ch1/guibas/knit_done.tex
@@ -31,12 +31,12 @@
 \fi
 % \psset{unit=2in,xunit=2in,yunit=2in}
 \psset{unit=.33\textwidth,xunit=.33\textwidth,yunit=.33\textwidth}
-\pspicture(0.100000,-0.200000)(1.90000,1.000000)
+\pspicture(0.00000,-0.200000)(2.0000,1.000000)
 \ifx\nofigs\undefined
 \catcode`@=11
 
 % \rput[b](.4,.9){$D_{L}$}
-\pscustom[linestyle=dotted]{
+\pscustom{
   \translate(-.2, 0.0)
   \psline[liftpen=2](0.1426,0.4554)
     (0.3694,0.1336)
@@ -113,7 +113,7 @@
 \psdots(0.80,0.58) %lcand.dest
 
 % \rput[b](1.6,.7){$D_{R}$}
-\pscustom[linestyle=dotted]{
+\pscustom{
   \translate(1.0, -0.2)
   \psline[liftpen=2](0.1426,0.4554)
     (0.3694,0.1336)
@@ -177,33 +177,33 @@
   \psdots(1.5821,0.2217)
 
 %1st spanner
-\psline[linestyle=dotted]{-}(0.1694,0.1336)(1.3694,-0.0664)
+\psline{-}(0.1694,0.1336)(1.3694,-0.0664)
 
 %2nd spanner
-\psline[linestyle=dotted]{-}(0.5225,0.1534)(1.3694,-0.0664)
+\psline{-}(0.5225,0.1534)(1.3694,-0.0664)
 
 %3rd spanner
-\psline[linestyle=dotted]{-}(0.5225,0.1534)(1.1426,0.2554)
+\psline{-}(0.5225,0.1534)(1.1426,0.2554)
 
 %4th spanner
-\psline[linestyle=dotted]{-}(0.6570,0.4534)(1.1426,0.2554)
+\psline{-}(0.6570,0.4534)(1.1426,0.2554)
 
 %5th spanner
-\psline[linestyle=dotted]{-}(1.1426,0.2554)(0.80,0.58)
+\psline{-}(1.1426,0.2554)(0.80,0.58)
 
 %6th spanner
-\psline[linestyle=dotted]{-}(0.80,0.58)(1.1587,0.5674)
+\psline{-}(0.80,0.58)(1.1587,0.5674)
 
 %7th spanner
-% \psline[linestyle=dotted]{-}(0.80,0.58)(1.4416,0.6727)
-\psline[linestyle=dotted]{-}(0.5265,0.7654)(1.1587,0.5674)
+% \psline{-}(0.80,0.58)(1.4416,0.6727)
+\psline{-}(0.5265,0.7654)(1.1587,0.5674)
 
 %8th spanner
-\psline[linestyle=dotted]{-}(0.5265,0.7654)(1.4416,0.6727)
+\psline{-}(0.5265,0.7654)(1.4416,0.6727)
 
 % uct
 % \rput[b]{-6}(.9,0.78){\emph{uct}}
-\psline[linestyle=dotted]{-}(0.245,0.8727)(1.4416,0.6727)
+\psline{-}(0.245,0.8727)(1.4416,0.6727)
 
 
 % %rcand
