--- a/figs/intro/convex_hull.tex
+++ b/figs/intro/convex_hull.tex
@@ -28,7 +28,7 @@
 \catcode`@=12
 
 \fi
-\psset{unit=2.5in,xunit=2.5in,yunit=2.5in}
+\psset{unit=.33\textwidth,xunit=.33\textwidth,yunit=.33\textwidth}
 \pspicture(0.000000,0.000000)(1.000000,1.000000)
 \ifx\nofigs\undefined
 \catcode`@=11
