--- a/figs/intro/del_intuition_done.tex
+++ b/figs/intro/del_intuition_done.tex
@@ -28,7 +28,7 @@
 \catcode`@=12
 
 \fi
-\psset{unit=2.5in,xunit=2.5in,yunit=2.5in}
+\psset{unit=\textwidth, xunit=\textwidth,yunit=\textwidth}
 \pspicture(0.000000,0.000000)(1.000000,1.000000)
 \ifx\nofigs\undefined
 \catcode`@=11
