draft given to jim on 4.1.16

--- a/figs/ch1/fortune/invalid_circle_event.tex
+++ b/figs/ch1/fortune/invalid_circle_event.tex
@@ -486,14 +486,7 @@
 % (0.9231,0.4079)
 % (0.9292,0.4422)
 
-\pscircle[linecolor=gray, linestyle=dashed](0.567623, 0.428336){.380616}
-
-\rput[B](0.567623, .068){$\ell$}
-\psdot[dotstyle=o](0.567623, .04772)
-
-\rput[r](0.545, 0.427){$q$}
-\psdot[dotstyle=o](0.567623, 0.428336)
-
+\pscircle[linestyle=dashed](0.567623, 0.428336){.380616}
 
 \PST@Fillcircle(0.1911,0.4840)
 \PST@Fillcircle(0.5881,0.8084)
