--- a/ifj_thesis.bib
+++ b/ifj_thesis.bib
@@ -19,7 +19,7 @@
   year = {1985},
 }
 
-@book{descartes,
+@incollection{descartes,
   address = {Cambridge, United Kingdom},
   title = {Descartes: The World and Other Writings},
   isbn = {0-511-03579-9, 0-521-63158-0, 0-521-63646-9},
@@ -28,4 +28,14 @@
   author = {Descartes, Rene},
   editor = {Stephen Gaukroger},
   year = {2004},
+}
+
+@article{guibas,
+    author  = {Guibas, Leonidas and Stolfi, Jorge},
+    title   = {Primitives for the Manipulation of General Subdivisions and the Computation of Voronoi Diagrams},
+    year    = {1985},
+    journal = {ACM Transactions on Graphics},
+    volume  = {4},
+    number  = {2},
+    pages   = {74-123}
 }
