--- a/figs/intro/first_sight.tex
+++ b/figs/intro/first_sight.tex
@@ -27,7 +27,7 @@
 \catcode`@=12
 
 \fi
-\psset{unit=\textwidth,xunit=\textwidth,yunit=\textwidth}
+\psset{unit=.5\textwidth,xunit=.5\textwidth,yunit=.5\textwidth}
 \pspicture(0.000000,0.000000)(1.000000,1.000000)
 \ifx\nofigs\undefined
 \catcode`@=11
@@ -167,40 +167,6 @@
 \PST@Border(0.3565,0.3639)
 (0.3565,0.3639)
 (0.0583,0.1580)
-
-\PST@Dashed(0.1426,0.4554)
-(0.1426,0.4554)
-(0.3694,0.1336)
-
-\PST@Dashed(0.1426,0.4554)
-(0.1426,0.4554)
-(0.5821,0.4217)
-
-\PST@Dashed(0.1426,0.4554)
-(0.1426,0.4554)
-(0.1587,0.7674)
-
-\PST@Dashed(0.1587,0.7674)
-(0.1587,0.7674)
-(0.1426,0.4554)
-
-\PST@Dashed(0.3674,0.6343)
-(0.3674,0.6343)
-(0.1426,0.4554)
-
-\PST@Dashed(0.5821,0.4217)
-(0.5821,0.4217)
-(0.1426,0.4554)
-
-\PST@Dashed(0.1426,0.4554)
-(0.1426,0.4554)
-(0.3674,0.6343)
-
-\PST@Dashed(0.3694,0.1336)
-(0.3694,0.1336)
-(0.1426,0.4554)
-
-\rput[r](0.135,0.45){$p_{i}$}
 
 \PST@Fillcircle(0.1426,0.4554)
 \PST@Fillcircle(0.1587,0.7674)
