might as well commit my changes for the alst day or so

--- a/figs/ch1/guibas/lct.tex
+++ b/figs/ch1/guibas/lct.tex
@@ -174,8 +174,8 @@
   \psdots(1.3694,-0.0664)
   \psdots(1.3674,0.4343)
   \psdots(1.5821,0.2217)
-\rput[b]{-10}(.85,-.05){$lct$}
-\psline[arrowsize=3pt 4, arrowinset=0]{-}(0.185,0.12)(1.3694,-0.0664)
+\rput[b]{-9}(.85,-.06){$lct$}
+\psline[arrowsize=3pt 4, arrowinset=0]{<->}(0.185,0.12)(1.35,-0.066)
 
 \catcode`@=12
 \fi
