--- a/figs/ch1/guibas/knit11.tex
+++ b/figs/ch1/guibas/knit11.tex
@@ -185,7 +185,7 @@
 \psline[linestyle=dotted]{-}(0.5225,0.1534)(1.3694,-0.0664)
 
 %basel
-\rput[t]{10}(.9,0.19){\emph{basel}}
+\rput[t]{10}(.9,0.19){\emph{b}}
 \psline[arrowsize=3pt 4, arrowinset=0]{<-}(0.532,0.153)(1.1426,0.2554)
 
 %rcand
