--- a/figs/ch1/guibas/knit2.tex
+++ b/figs/ch1/guibas/knit2.tex
@@ -176,21 +176,22 @@
   \psdots(1.5821,0.2217)
 
 %basel
-\rput[b]{-10}(.85,-.07){\emph{basel}}
+\rput[b]{-10}(.85,-.07){\emph{b}}
 \psline[arrowsize=3pt 4, arrowinset=0]{<-}(0.185,0.12)(1.3694,-0.0664)
-
-%rcand
-\rput[b]{-37}(1.27,.1){$r$}
-\psline[arrowsize=3pt 4, arrowinset=0]{->}(1.3694,-0.0664)(1.148,0.24)
 
 %lcand
 \rput[b]{5}(.37,.17){$\ell$}
 \psline[linecolor=lightgray, arrowsize=3pt 4, arrowinset=0]{->}(0.1694,0.1336)(0.51,0.1534)
 
 %lcand.onext()
-\rput[b](0.37,0.455){$v$}
+% \rput[b](0.37,0.455){$v$}
 % \rput[b]{55.5}(.24,.27){$\ell.onext$}
-\psline[linecolor=lightgray, arrowsize=3pt 4, arrowinset=0]{->}(0.1694,0.1336)(0.375,0.41)
+% \psline[linecolor=lightgray, arrowsize=3pt 4, arrowinset=0]{->}(0.1694,0.1336)(0.375,0.41)
+
+%rcand
+\rput[b]{-37}(1.27,.1){$r$}
+\psline[arrowsize=3pt 4, arrowinset=0]{->}(1.3694,-0.0664)(1.148,0.24)
+
 
 % %lcand.onext()
 % \rput[b](0.37,0.455){$v$}
