--- a/figs/ch1/guibas/knit3.tex
+++ b/figs/ch1/guibas/knit3.tex
@@ -176,7 +176,7 @@
   \psdots(1.5821,0.2217)
 
 %basel
-\rput[b]{-10}(.85,-.07){\emph{basel}}
+\rput[b]{-10}(.85,-.07){\emph{b}}
 \psline[arrowsize=3pt 4, arrowinset=0]{<-}(0.185,0.12)(1.3694,-0.0664)
 
 %rcand
@@ -185,7 +185,7 @@
 
 %rcand.oprev()
 \rput[b](1.56,0.27){$u$}
-\rput[t]{55}(1.5,.06){$r.oprev$}
+\rput[t]{54}(1.48,.08){$r.cw()$}
 \psline[arrowsize=3pt 4, arrowinset=0]{->}(1.3694,-0.0664)(1.5821,0.2217)
 
 %lcand
@@ -193,9 +193,9 @@
 \psline[linecolor=lightgray, arrowsize=3pt 4, arrowinset=0]{->}(0.1694,0.1336)(0.51,0.1534)
 
 %lcand.onext()
-\rput[b](0.37,0.455){$v$}
+% \rput[b](0.37,0.455){$v$}
 % \rput[b]{55.5}(.24,.27){$\ell.onext$}[linecolor=lightgray]
-\psline[linecolor=lightgray, arrowsize=3pt 4, arrowinset=0]{->}(0.1694,0.1336)(0.375,0.41)
+% \psline[linecolor=lightgray, arrowsize=3pt 4, arrowinset=0]{->}(0.1694,0.1336)(0.375,0.41)
 
 % circle
 % \rput[b](-.5,1.0){\emph{"Rising Bubble"}}
