--- a/figs/ch1/guibas/knit4.tex
+++ b/figs/ch1/guibas/knit4.tex
@@ -176,7 +176,7 @@
   \psdots(1.5821,0.2217)
 
 %basel
-\rput[b]{-10}(.85,-.07){\emph{basel}}
+\rput[b]{-10}(.85,-.07){\emph{b}}
 \psline[arrowsize=3pt 4, arrowinset=0]{<-}(0.185,0.12)(1.3694,-0.0664)
 
 %rcand
