--- a/figs/ch1/guibas/knit0.tex
+++ b/figs/ch1/guibas/knit0.tex
@@ -276,11 +276,16 @@
   \psdots[linecolor=lightgray](1.3694,-0.0664)
   \psdots[linecolor=lightgray](1.3674,0.4343)
   \psdots[linecolor=lightgray](1.5821,0.2217)
-\rput[b]{-10}(.85,-.05){\emph{basel}}
+\rput[b]{-10}(.85,-.05){\emph{b}}
 \psline[arrowsize=3pt 4, arrowinset=0]{<-}(0.185,0.12)(1.3694,-0.0664)
 
 \rput[b]{5}(.37,.17){$\ell$}
 \psline[arrowsize=3pt 4, arrowinset=0]{->}(0.1694,0.1336)(0.51,0.1534)
+
+%rcand
+\rput[b]{-37}(1.27,.1){$r$}
+\psline[linecolor=lightgray, arrowsize=3pt 4, arrowinset=0]{->}(1.3694,-0.0664)(1.148,0.24)
+
 
 \catcode`@=12
 \fi
