--- a/figs/ch1/guibas/knit6.tex
+++ b/figs/ch1/guibas/knit6.tex
@@ -180,7 +180,7 @@
 \psline[linestyle=dotted]{-}(0.1694,0.1336)(1.3694,-0.0664)
 
 %basel
-\rput[b]{-13}(.9,0.07){\emph{basel}}
+\rput[b]{-13}(.9,0.07){\emph{b}}
 \psline[arrowsize=3pt 4, arrowinset=0]{<-}(0.53,0.15)(1.3694,-0.0664)
 
 %rcand
