--- a/figs/ch1/guibas/knit7.tex
+++ b/figs/ch1/guibas/knit7.tex
@@ -283,7 +283,7 @@
 \psline[linestyle=dotted]{-}(0.1694,0.1336)(1.3694,-0.0664)
 
 %basel
-\rput[b]{-13}(.9,0.07){\emph{basel}}
+\rput[b]{-13}(.9,0.07){\emph{b}}
 \psline[arrowsize=3pt 4, arrowinset=0]{<-}(0.53,0.15)(1.3694,-0.0664)
 
 %rcand
@@ -295,7 +295,7 @@
 \psline[arrowsize=3pt 4, arrowinset=0]{->}(0.5225,0.1534)(0.65,0.44)
 
 %lcand.onext
-\rput[b](0.37,0.45){$v$}
+\rput[b](0.37,0.47){$v$}
 \psline[arrowsize=3pt 4, arrowinset=0]{->}(0.5225,0.1534)(0.38,0.417)
 %lcand.onext
 
