--- a/figs/intro/delaunayhood_small.tex
+++ b/figs/intro/delaunayhood_small.tex
@@ -10,7 +10,7 @@
 \fi
 % \psset{unit=2in,xunit=2in,yunit=2in}
 \psset{unit=.33\textwidth,xunit=.33\textwidth,yunit=.33\textwidth}
-\pspicture(-0.25000, -0.12500)(.7500,1.000000)
+\pspicture(-0.25000, 0.000)(.7500,.8)
 \ifx\nofigs\undefined
 \catcode`@=11
 
